
*Auditbeat*

- Fixed a crash in the file_integrity module under Linux. {issue}7753[7753]

*Filebeat*

- Fixed a memory leak when harvesters are closed. {pull}7820[7820]

*Heartbeat*

*Metricbeat*

- Fix golang.heap.gc.cpu_fraction type from long to float in Golang module. {pull}7789[7789]
- Fixed a panic when the kvm module cannot establish a connection to libvirtd. {issue}7792[7792].

*Packetbeat*

*Winlogbeat*


==== Added

*Affecting all Beats*
- Add backoff on error support to redis output. {pull}7781[7781]

- Add field `host.os.kernel` to the add_host_metadata processor and to the
  internal monitoring data. {issue}7807[7807]

*Auditbeat*

*Filebeat*

- Make inputsource generic taking bufio.SplitFunc as input {pull}7746[7746]
- Add custom unpack to log hints config to avoid env resolution {pull}7710[7710]

*Heartbeat*

*Metricbeat*
- Add metrics about cache size to memcached module {pull}7740[7740]
- Move common kafka fields (broker, topic and partition.id) to the module level to facilitate events correlation {pull}7767[7767]
- Add `metircs` metricset to MongoDB module. {pull}7611[7611]
- Add fields for mermory fragmentation, memory allocator stats, copy on write, master-slave status, and active defragmentation to `info` metricset of Redis module. {pull}7695[7695]
- Add experimental socket summary metricset to system module {pull}6782[6782]

*Packetbeat*

*Winlogbeat*


==== Deprecated

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*
- Redis `info` `replication.master_offset` has been deprecated in favor of `replication.master.offset`.{pull}7695[7695]

- Move common kafka fields (broker, topic and partition.id) to the module level {pull}7767[7767].

*Packetbeat*

*Winlogbeat*

==== Known Issue


////////////////////////////////////////////////////////////

[[release-notes-6.4.0]]
=== Beats version 6.4.0
https://github.com/elastic/beats/compare/v6.3.1...v6.4.0[View commits]

==== Breaking changes

*Affecting all Beats*
